# packages/api-server/src/http/middleware/cache.ts
@@ -1,0 +1,9 @@
+export interface CacheHeaders {
+  [name: string]: string;
+}
+
+export function mediaCacheHeaders(): CacheHeaders {
+  return {
+    "Cache-Control": "public, max-age=31536000, immutable",
+  };
+}
